jaeger/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.60.0
          args: ["--collector.otlp.grpc.host-port=0.0.0.0:4317", "--collector.otlp.http.host-port=0.0.0.0:4318"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 16686
            - containerPort: 4317
            - containerPort: 4318
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
