jaeger/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - port: 16686
      targetPort: 16686
      name: web
    - port: 4317
      targetPort: 4317
      name: data
  type: ClusterIP
